Reworked user invites
