# webserver/src/http/handler_frontend/user_invites/handler_club_admin.rs
@@ -1,4 +1,4 @@
-//! Handlers for user invites of administrative users
+//! The handlers for user invites of club admins
 
 use rorm::query;
 use rorm::FieldAccess;
@@ -9,23 +9,23 @@ use crate::global::GLOBAL;
 use crate::http::common::errors::ApiResult;
 use crate::http::common::schemas::FormResult;
 use crate::http::extractors::api_json::ApiJson;
+use crate::http::extractors::session_user::SessionUser;
 use crate::http::handler_frontend::user_invites::schema::CreateUserInviteErrors;
-use crate::http::handler_frontend::user_invites::schema::CreateUserInviteRequestAdmin;
+use crate::http::handler_frontend::user_invites::schema::CreateUserInviteRequestClubAdmin;
 use crate::http::handler_frontend::user_invites::schema::CreateUserInviteResponse;
-use crate::http::handler_frontend::user_invites::schema::UserRoleWithClub;
 use crate::models::User;
 use crate::models::UserInvite;
 use crate::models::UserRole;
 
 /// Create a new invite for a user
 #[post("/")]
-pub async fn create_invite_admin(
-    ApiJson(CreateUserInviteRequestAdmin {
+pub async fn create_invite_club_admin(
+    SessionUser { user }: SessionUser,
+    ApiJson(CreateUserInviteRequestClubAdmin {
         username,
         display_name,
         preferred_lang,
-        role,
-    }): ApiJson<CreateUserInviteRequestAdmin>,
+    }): ApiJson<CreateUserInviteRequestClubAdmin>,
 ) -> ApiResult<ApiJson<FormResult<CreateUserInviteResponse, CreateUserInviteErrors>>> {
     let username = username.into_inner();
     let display_name = display_name.into_inner();
@@ -54,26 +54,13 @@ pub async fn create_invite_admin(
         })));
     }
 
-    let mut club_uuid = None;
-    let role = match role {
-        UserRoleWithClub::Administrator => UserRole::Administrator,
-        UserRoleWithClub::ClubAdmin(club) => {
-            club_uuid = Some(club);
-            UserRole::ClubAdmin
-        }
-        UserRoleWithClub::User(club) => {
-            club_uuid = Some(club);
-            UserRole::User
-        }
-    };
-
     let invite = UserInvite::create_invite(
         &mut tx,
         username,
         display_name,
         preferred_lang,
-        role,
-        club_uuid,
+        UserRole::User,
+        user.0.club.map(|x| *x.key()),
     )
     .await?;
 
